# zmk

./: .gitignore  CMakeLists.txt  README.md  build-nix.sh  combined-2  combined-3
chords/: README.md  analyze.py  analyze_chords.py  chordable_map.json  convert_sartak.py  dump_corpus.py  english_top_50.txt  evaluate_chords.py  generate_zmk_chords.py  generate_zmk_config.py  ignore.txt  jocke_chords.json  key_log.sqlite  my_corpus.txt  sartak_chordable_map.json  sartak_chords.json  shell.nix
chrd/: chordable_map.json  corpus.txt  ignore.txt
config/: chords.keymap  default.nix  generated_chords.keymap  generated_combos.dtsi  generated_macros.dtsi  glove80.conf  glove80.keymap
custom_behavior/: CMakeLists.txt  Kconfig  behavior_cycle_string.c  cycle_string_lists.h
custom_behavior/dts/bindings/behaviors/: chord-cycle,behavior-cycle-string.yaml
custom_behavior/zephyr/: module.yml
dts/bindings/behaviors/: chord-cycle,behavior-cycle-string.yaml
